# pre-commit-hooks

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .vocabulary  Makefile  README.md  pyproject.toml  pytest.ini  requirements.in  requirements.txt  requirements_dev.in  requirements_dev.txt  setup.cfg
.github/workflows/: build.yml
hooks/: validate_ajustable_complexity.py  validate_amount_of_py_file_lines.py  validate_api_schema_annotations.py  validate_celery_tasks_return_types.py  validate_django_deprecated_model_field_comments.py  validate_django_model_field_names.py  validate_django_null_true_comments.py  validate_expressions_complexity.py  validate_graphql_model_fields_definition.py  validate_no_asserts.py  validate_no_forbidden_imports.py  validate_old_style_annotations.py  validate_package_structure.py  validate_settings_variables.py  validate_test_namings.py
hooks/tests/: helpers.py
hooks/tests/test_integration/: test_validate_django_null_true_comments.py  test_validate_settings_variables.py
hooks/tests/test_integration/test_validate_celery_tasks_return_types/: test_validate_celery_tasks_return_types.py
hooks/tests/test_integration/test_validate_celery_tasks_return_types/samples/: app.py  tasks_with_correct_return_types.py  tasks_with_incorrect_return_types.py
hooks/tests/test_integration/test_validate_django_deprecated_model_field_comments/: test_validate_django_deprecated_model_field_comments.py
hooks/tests/test_integration/test_validate_django_deprecated_model_field_comments/samples/: models_with_invalid_deprecated_field_comments.py  models_with_valid_deprecated_field_comments.py
hooks/tests/test_integration/test_validate_django_model_field_names/: test_validate_django_model_field_names.py
hooks/tests/test_integration/test_validate_django_model_field_names/samples/package_a/: models.py  serializers.py
hooks/tests/test_integration/test_validate_django_model_field_names/samples/package_b/models/: model_a.py  model_b.py
hooks/tests/test_integration/test_validate_expressions_complexity/: test_validate_expressions_complexity.py
hooks/tests/test_integration/test_validate_expressions_complexity/samples/: sample.py
hooks/tests/test_unit/: test_validate_api_schema_annotations.py  test_validate_celery_tasks_return_types.py  test_validate_no_forbidden_imports.py  test_validate_package_structure.py
hooks/tests/test_unit/test_validate_django_deprecated_model_field_comments/: conftest.py  test_matchers.py  test_utils.py  test_visitor.py
hooks/tests/test_unit/test_validate_django_model_field_names/: test_assign_helpers.py  test_boolean_validator.py  test_date_validator.py  test_datetime_validator.py  test_get_validator.py
hooks/utils/: ast_helpers.py  common_types.py  complexity.py  list_utils.py  mypy_api_helpers.py  pre_commit.py
hooks/utils/tests/: test_ast_helpers.py  test_config_readers.py  test_mypy_api_helpers.py  test_pre_commit.py
scripts/: check-gitleaks.sh
