[metadata]
name = pre_commit_hooks
version = 1.0.0
description = BestDoctor-wide pre-commit hooks.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/best-doctor/pre-commit-hooks
author = Vladimir Kotikov
author_email = v.kotikov@bestdoctor.ru
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
install_requires =
  libcst==0.3.18
  mccabe==0.6.1
python_requires = >=3.8

[options.entry_points]
console_scripts =
    validate_ajustable_complexity = hooks.validate_ajustable_complexity:main
    validate_amount_of_py_file_lines = hooks.validate_amount_of_py_file_lines:main
    validate_api_schema_annotations = hooks.validate_api_schema_annotations:main
    validate_django_null_true_comments = hooks.validate_django_null_true_comments:main
    validate_django_deprecated_model_field_comments = hooks.validate_django_deprecated_model_field_comments:main
    validate_django_model_field_names = hooks.validate_django_model_field_names:main
    validate_expressions_complexity = hooks.validate_expressions_complexity:main
    validate_graphql_model_fields_definition = hooks.validate_graphql_model_fields_definition:main
    validate_no_asserts = hooks.validate_no_asserts:main
    validate_no_forbidden_imports = hooks.validate_no_forbidden_imports:main
    validate_old_style_annotations = hooks.validate_old_style_annotations:main
    validate_package_structure = hooks.validate_package_structure:main
    validate_settings_variables = hooks.validate_settings_variables:main
    validate_test_namings = hooks.validate_test_namings:main

[options.packages.find]
exclude = tests*

[bdist_wheel]
universal = True

[flake8]
max-line-length = 120
exclude = venv

[mypy]
python_version = 3.8
mypy_path = ./types_stubs/
ignore_missing_imports = True
warn_no_return = False
check_untyped_defs = True
warn_unused_ignores = True
disallow_untyped_defs = True
allow_redefinition = True
follow_imports = skip
exclude = env|venv|venv.*|tests

[mypy-*.tests.*]
ignore_errors = True

[mypy-mccabe.*]
ignore_missing_imports = True

[mypy-setuptools.*]
ignore_missing_imports = True

[isort]
line_length = 120
multi_line_output = 3
use_parentheses = True
include_trailing_comma = True
add_imports =
  from __future__ import annotations
skip_gitignore = True
skip = migrations,venv
